feat(upgrade): build project with Confit v1.7.0

--- a/src/modules/demoModule/styles/app.styl
+++ b/src/modules/demoModule/styles/app.styl
@@ -1,7 +1,8 @@
 $body-bg = #eeddee
 
-body
-  background-color: $body-bg
+.css-type:after
+  content: 'CSS Preprocessor: Stylus'
+
 
 h1
   color: rgb(40, 50, 60, 1)
